avances nesting_var_import

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,28 +17,30 @@
 </head>
 
 <body>
-    <header id="head">
-        <nav class="navbar">
-           <div class="navegador_logo">
-                <a href="../index.html"><img src="../img/logo_crop.png" alt="logo de la compañía" class="logo"></a>
+    <header>
+        <div class="row">
+            <!--Navbar-->
+            <div class="col-sm-1">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../img/logo_crop.png" alt="logo" class="logo_organica"></a>
             </div>
-            <div>
-                <ul class="navegador_botones">
-                    <li>
-                        <a class="navegador_botones_link" href="estudio.html">Estudio</a>
+            <div class="col-sm-11">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/estudio.html">Estudio</a>
                     </li>
-                    <li>
-                        <a class="navegador_botones_link" href="proyectos.html">Proyectos</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/proyectos.html">Proyectos</a>
                     </li>
-                    <li>
-                        <a class="navegador_botones_link" href="publicaciones.html">Publicaciones</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/publicaciones.html">Publicaciones</a>
                     </li>
-                    <li>
-                        <a class="navegador_botones_link" href="contacto.html">Contacto</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
-        </nav>
+        </div>
     </header>
     <!-- Fin Header -->
 
@@ -61,10 +63,10 @@
         </div>
     </main>
     
-    <footer class="footer_contacto">
-        <section class="barra_contacto">
-            <h2>2023 - Todos los Derechos Reservados</h2>
-        </section>
+    <footer class="footer">
+        <div class="container footer_texto">
+            <span>2023 - Todos los Derechos Reservados</span>
+        </div>
     </footer>
 </body>
 
