--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <!-- Estilos 👇 -->
     <link rel="stylesheet" href="./css/estilo.css">
     <!---- Font Raleway -->
@@ -73,7 +74,7 @@
                             <img src="./Img/casa.png" class="card-image-top" alt="thumbnail">
 
                             <div class="card-body">
-                                <h3 class="card-title"><a href="#" class="text-secondary">CASAS</a></h3>
+                                <h3 class="card-title"><span>CASAS</span></h3>
                             </div>
                         </div>
                     </div>
@@ -85,7 +86,7 @@
                             <img src="./Img/casa.png" class="card-image-top" alt="thumbnail">
 
                             <div class="card-body">
-                                <h3 class="card-title"><a href="#" class="text-secondary">EDIFICIOS</a></h3>
+                                <h3 class="card-title"><span class="">EDIFICIOS</span></h3>
                             </div>
                         </div>
                     </div>
@@ -96,7 +97,7 @@
                             <img src="./Img/casa.png" class="card-image-top" alt="thumbnail">
 
                             <div class="card-body">
-                                <h3 class="card-title"><a href="#" class="text-secondary">REFORMAS</a></h3>
+                                <h3 class="card-title"><span class="">REFORMAS</span></h3>
                             </div>
                         </div>
                     </div>
