--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/casa.png" class="card-image-top" alt="thumbnail">
+                            <img src="./Img/casa.png" class="card-image-top grow" alt="casas">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span>CASAS</span></h3>
@@ -83,7 +83,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/casa.png" class="card-image-top" alt="thumbnail">
+                            <img src="./Img/casa.png" class="card-image-top" alt="edificios">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span class="">EDIFICIOS</span></h3>
@@ -94,7 +94,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/casa.png" class="card-image-top" alt="thumbnail">
+                            <img src="./Img/casa.png" class="card-image-top" alt="reformas">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span class="">REFORMAS</span></h3>
