--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestro mundo de creatividad arquitectónica y diseño innovador. Descubre espacios inspiradores, soluciones funcionales y belleza estética en cada proyecto. Únete a nosotros para transformar tus sueños en realidades arquitectónicas impactantes.">
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Home</title>
+    <title>organica | Home</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <!-- Estilos 👇 -->
     <link rel="stylesheet" href="./css/estilo.css">
