--- a/pages/estudio.html
+++ b/pages/estudio.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conoce a nuestro talentoso equipo de arquitectas: Camilla Federica Lerose y Georgina De León. Juntas, aportamos pasión por el diseño, experiencia diversa y una visión vanguardista a cada proyecto. Explora nuestra obra arquitectónica y descubre cómo fusionamos funcionalidad y belleza en cada creación.">
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Estudio</title>
+    <title>organica | Estudio</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <!-- Estilos 👇 -->
     <link rel="stylesheet" href="../css/estilo.css">
