--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestra cartera de proyectos arquitectónicos y descubre un mundo de creatividad y diseño. Desde viviendas modernas hasta espacios comerciales innovadores, cada proyecto refleja nuestra pasión por la arquitectura funcional y estéticamente impactante. Sumérgete en nuestra galería y encuentra inspiración para tu próximo proyecto.">
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Proyectos</title>
+    <title>organica | Proyectos</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <!-- Estilos 👇 -->
     <link rel="stylesheet" href="../css/estilo.css">
