--- a/pages/publicaciones.html
+++ b/pages/publicaciones.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora nuestra sección de publicaciones, donde te sumergirás en un mundo de conocimiento arquitectónico a través de artículos inspiradores y perspicaces. Nuestra revista de arquitectura en línea ofrece una mirada profunda a las tendencias, innovaciones y desafíos en el mundo del diseño y la construcción. Desde análisis de proyectos emblemáticos hasta debates sobre sostenibilidad, nuestra publicación es tu recurso definitivo para mantenerte informado y conectado con la comunidad arquitectónica global.">
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Publicaciones</title>
+    <title>organica | Publicaciones</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <!-- Estilos 👇 -->
     <link rel="stylesheet" href="../css/estilo.css">
