--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora nuestro mundo de creatividad arquitectónica y diseño innovador. Descubre espacios inspiradores, soluciones funcionales y belleza estética en cada proyecto. Únete a nosotros para transformar tus sueños en realidades arquitectónicas impactantes.">
+    <meta name="keywords" content="arquitectas, estudio, arquitectura">
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>organica | Home</title>
