--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/casa.png" class="card-image-top" alt="edificios">
+                            <img src="./Img/edificio1.jpg" class="card-image-top" alt="edificios">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span class="">EDIFICIOS</span></h3>
@@ -96,7 +96,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/casa.png" class="card-image-top" alt="reformas">
+                            <img src="./Img/reforma2.jpg" class="card-image-top" alt="reformas">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span class="">REFORMAS</span></h3>
