agrego publicaciones de revistas

--- a/pages/publicaciones.html
+++ b/pages/publicaciones.html
@@ -80,11 +80,29 @@
 
             <div class="row">
                 <div class="col xs-6">
+                    <p class="">
+                        La Casa Dosmurs es la respuesta a la búsqueda de un espacio familiar sereno. Por eso, fue concebida como un mecanismo de aislamiento capaz de ignorar el entorno perimetral inmediato, a la vez que se abre con vistas al mar y a un patio verde contemplativo.
+                        El proyecto está situado en una zona residencial, en las afueras de Alella, una población costera de El Maresme. El barrio se extiende a lo largo de la montaña, y presenta una combinación ecléctica de estilos arquitectónicos que provocan una sensación de desorden y desarmonía.El sitio presenta una fuerte pendiente. Debido a esto y a la proximidad entre casas, la única vista abierta desde el solar es hacia el mar. En la parte baja del terreno, los árboles autóctonos crecieron espontáneamente y enmarcan el paisaje, que se despliega en una continuación de colinas sinuosas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col xs-6">
                     <div class="">
                         <h2>Revista Summa+</h2>
                     </div>
                     <p class="">
                         La muestra llevada a cabo en el Vitra Design Museum, curada por Jochen Eisenbrand y Anna-Mea Hoffmann, indaga sobre el ámbito doméstico, su historia y sus perspectivas futuras. A su vez, da cuenta de los cambios sociales, políticos y técnicos de los últimos cien años, que se reflejan en los interiores de nuestras viviendas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col xs-6">
+                    <p class="">
+                        La Casa de la República de Weimar es una prueba fehaciente de que la identidad de los edificios está definida por su contexto histórico. Su ubicación frente al icónico Teatro Nacional de Weimar, fundamental en la historia de la ciudad, refuerza esta conexión.
+                        En la actualidad, funciona como galería de arte y se alinea estratégicamente con la plaza del teatro, resaltando su fachada. La inauguración del museo transformó el barrio, dotándolo de una identidad distintiva que lo convierte en un centro atractivo.Para crear el museo, se llevó a cabo una ampliación del edificio sobre los cimientos de las ruinas de la armería y consta de tres espacios distinguidos. El nivel del jardín alberga una sala multifuncional y una pequeña cafetería. Con su diseño transparente y abierto, fomenta la conexión con el entorno.El nivel intermedio extiende el área de exposición y brinda versatilidad con tabiques móviles. Es un espacio neutral que resalta la presentación museística. Aquí, las ventanas estratégicamente ubicadas proporcionan vistas directas hacia la zona abierta.El nivel superior alberga un centro de investigación científica, con oficinas, zonas de reunión y una biblioteca. Una apertura en forma de franja continua asegura la entrada de abundante luz natural y establece una conexión con el entorno exterior.
                     </p>
                 </div>
             </div>
