prueba redes sociales

--- a/index.html
+++ b/index.html
@@ -113,7 +113,24 @@
         <div class="container footer_texto">
             <span>2023 - Todos los Derechos Reservados</span>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    
+                </div>
+                <div class="col-md-6 text-end">
+                    <div class="social-icons">
+                        <a href="#" class="social-link"><img src="../img/instagram40x40.png" alt="Instagram"></a>
+                        <a href="#" class="social-link"><img src="../img/gmail40x40.png" alt="Gmail"></a>
+                    </div>
+                </div>
+            </div>
+        </div>      
     </footer>
+
+
+
 
     <!-- Bootstrap core JavaScript
   ================================================== -->
