--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -79,13 +79,13 @@
                     <img class="d-block w-100" src="../img/casa.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../img/edificio.png" alt="Second slide">
+                    <img class="d-block w-100" src="../img/edificio1.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="../img/oficina.jpg" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../img/reforma.jpg" alt="Fourth slide">
+                    <img class="d-block w-100" src="../img/reforma2.jpg" alt="Fourth slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
