--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/casa.png" class="card-image-top grow" alt="casas">
+                            <img src="./img/casa.png" class="card-image-top grow" alt="casas">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span>CASAS</span></h3>
@@ -85,7 +85,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/edificio1.jpg" class="card-image-top" alt="edificios">
+                            <img src="./img/edificio1.jpg" class="card-image-top" alt="edificios">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span class="">EDIFICIOS</span></h3>
@@ -96,7 +96,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card my-3 card-border">
 
-                            <img src="./Img/reforma2.jpg" class="card-image-top" alt="reformas">
+                            <img src="./img/reforma2.jpg" class="card-image-top" alt="reformas">
 
                             <div class="card-body">
                                 <h3 class="card-title"><span class="">REFORMAS</span></h3>
