--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="¡Conéctate con nosotros! Nuestra sección de contacto te brinda la oportunidad de colaborar en tus proyectos arquitectónicos. Ya sea que estés buscando diseñar tu hogar ideal o transformar un espacio comercial, nuestro equipo de arquitectos expertos está aquí para convertir tus visiones en realidad. Contáctanos hoy para discutir tus ideas y comenzar un emocionante viaje hacia un diseño excepcional.">
+    <meta name="keywords" content="arquitectas,estudio,arquitectura,espacios,diseño">
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
