--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -105,7 +105,16 @@
         <div class="container footer_texto">
             <span>2023 - Todos los Derechos Reservados</span>
         </div>
+            
+        <div class="redes">
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/fb1.png"></a></li>
+                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="img/instagram40x40.png"></a></li>   
+                <li><a href="https://www.gmail.com/"><img src="img/gmail40x40.png" target="_blank"></a></li>     
+            </ul>
+        </div>
     </footer>
+
 
     <!-- Bootstrap core JavaScript
   ================================================== -->
