agrego botones de redes sociales

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
 
     <!-- Begin page content -->
-    <main role="main" class="container_bajopantalla">
+    <main role="main" class="container container_bajopantalla">
 
         <h1 class="home_titulo">ARQUITECTURA Y DISEÑO</h1>
 
