--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@
     </header>
     <!-- Fin Header -->
 
-    <main role="main" >
+    <main role="main"  class="container_bajopantalla">
         <div class="css_grid_form_container">
             <form action="" class="css_grid_form">
                 <label for="name">Nombre</label>
@@ -76,9 +76,9 @@
             
         <div class="redes">
             <ul>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/fb1.png"></a></li>
-                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="img/instagram40x40.png"></a></li>   
-                <li><a href="https://www.gmail.com/"><img src="img/gmail40x40.png" target="_blank"></a></li>     
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../img/fb1.png"></a></li>
+                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="../img/instagram40x40.png"></a></li>   
+                <li><a href="https://www.gmail.com/"><img src="../img/gmail40x40.png" target="_blank"></a></li>     
             </ul>
         </div>
     </footer>
