--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -108,9 +108,9 @@
             
         <div class="redes">
             <ul>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/fb1.png"></a></li>
-                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="img/instagram40x40.png"></a></li>   
-                <li><a href="https://www.gmail.com/"><img src="img/gmail40x40.png" target="_blank"></a></li>     
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../img/fb1.png"></a></li>
+                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="../img/instagram40x40.png"></a></li>   
+                <li><a href="https://www.gmail.com/"><img src="../img/gmail40x40.png" target="_blank"></a></li>     
             </ul>
         </div>
     </footer>
