--- a/pages/publicaciones.html
+++ b/pages/publicaciones.html
@@ -61,7 +61,7 @@
     </header>
 
     <!-- Begin page content -->
-    <main role="main" class="container">
+    <main role="main" class="container container_bajopantalla">
 
         <article>
             <h1 class="home_titulo">PUBLICACIONES</h1>
@@ -117,9 +117,9 @@
             
         <div class="redes">
             <ul>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/fb1.png"></a></li>
-                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="img/instagram40x40.png"></a></li>   
-                <li><a href="https://www.gmail.com/"><img src="img/gmail40x40.png" target="_blank"></a></li>     
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../img/fb1.png"></a></li>
+                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="../img/instagram40x40.png"></a></li>   
+                <li><a href="https://www.gmail.com/"><img src="../img/gmail40x40.png" target="_blank"></a></li>     
             </ul>
         </div>
     </footer>
