cambios en logos redes sociales

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -108,9 +108,9 @@
             
         <div class="redes">
             <ul>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="../img/facelogo1.png"></a></li>
-                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="../img/instalogo1.png"></a></li>   
-                <li><a href="https://www.gmail.com/" target="_blank"><img src="../img/gmailogo30x30.png"></a></li>     
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../img/logo_fb_blanco.png"></a></li>
+                <li><a href="https://www.instagram.com/organica.arqs/" target="_blank"><img src="../img/logo_ig_blanco.png"></a></li>   
+                <li><a href="https://www.gmail.com/" target="_blank"><img src="../img/logo_gmail_blanco.png"></a></li>     
             </ul>
         </div>
     </footer>
