agrego mapa a contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,6 +67,10 @@
                 <input type="submit" value="Enviar datos" class="css_grid_form_buttons">
         </form>
         </div>
+
+                <section class="mapcentro">
+                    <img src="../img/mapa.png" alt="mapa">
+                </section>
     </main>
 
     <footer class="footer">
