--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,9 +68,28 @@
         </form>
         </div>
 
-                <section class="mapcentro">
-                    <img src="../img/mapa.png" alt="mapa">
-                </section>
+        <div class="contact-info">
+            <div class="contact-item">
+                <strong>Instagram</strong>
+                <p>Organica Arqs</p>
+            </div>
+            <div class="contact-item">
+                <strong>Facebook</strong>
+                <p>Arq Organica</p>
+            </div>
+            <div class="contact-item">
+                <strong>E-Mail</strong>
+                <p>organica.arq@gmail.com</p>
+            </div>
+            <div class="contact-item">
+                <strong>Whatsapp</strong>
+                <p>11 78569954</p>
+            </div>
+        </div>
+
+            <section class="mapcentro">
+                <img src="../img/mapa.png" alt="mapa">
+            </section>
     </main>
 
     <footer class="footer">
