--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -65,8 +65,11 @@
     <main role="main" class="container">
 
         <article>
-            <h1 class="home_titulo">PROYECTOS</h1>
+            <h1 class="home_titulo">PROYECTOS DESTACADOS</h1>
         </article>
+        <div>
+            <p class="centrado">Explora algunos de nuestros proyectos arquitectónicos más recientes</p>
+        </div>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
