agrego texto a proyectos

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -102,6 +102,18 @@
             </a>
         </div>
 
+        <div>
+            <h2 class="project-description"><strong>1 - Casa Junin</strong>: Esta hermosa casa cuenta con piscina privada, amplios ventanales que permiten una abundante entrada de luz natural.</h2>
+        </div>
+        <div>
+            <h2 class="project-description"><strong>2 - Edificio Olazabal</strong>: Esta obra cuenta con cuatro pisos y garage personal para cada uno de los dueños de las unidades funcionales,innovamos en materia de iluminación y diseño con listones de madera en su fachada.</h2>
+        </div>
+        <div>
+            <h2 class="project-description"><strong>3 - Café Echeverria</strong>: El diseño estuvo inspirado en un ambiente muy luminoso que combine el arte de las paredes, la naturaleza y por supuesto que los clientes tengan privacidad y comodidad en sus reuniones.</h2>
+        </div>
+        <div>
+            <h2 class="project-description"><strong>4 - Reforma Donado</strong>: Esta cocina-comedor tiene un diseño moderno con colores claros que le dan amplitud y armonía al ambiente.</h2>
+        </div>
     </main>
 
     <footer class="footer">
