--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="navbar-brand" href="./index.html">
                     <img src="./img/logo_crop.png" alt="logo" class="logo_organica"></a>
             </div>
-            <div class="col-sm-11">
+            <div class="col-sm-10">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/estudio.html">Estudio</a>
@@ -51,6 +51,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/publicaciones.html">Publicaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/presupuesto.html">Presupuesto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/contacto.html">Contacto</a>
