--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="../pages/publicaciones.html">Publicaciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/presupuesto.html">Presupuesto</a>
+                        <a class="nav-link" href="../pages/presupuesto.html">Presupuesto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/contacto.html">Contacto</a>
