--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -7,6 +7,12 @@
     <meta name="description"
         content="Explora nuestra sección de publicaciones, donde te sumergirás en un mundo de conocimiento arquitectónico a través de artículos inspiradores y perspicaces. Nuestra revista de arquitectura en línea ofrece una mirada profunda a las tendencias, innovaciones y desafíos en el mundo del diseño y la construcción. Desde análisis de proyectos emblemáticos hasta debates sobre sostenibilidad, nuestra publicación es tu recurso definitivo para mantenerte informado y conectado con la comunidad arquitectónica global.">
     <meta name="keywords" content="revistas, publicaciones, arquitectas, notas, medios">
+    <!--Link a Toastify-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.9.2/toastify.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.9.2/toastify.min.js"></script>
+    <!-- Inclusión del archivo JavaScript -->
+    <script scr="presupuesto_libreria.js"></script>
+    
     <!--Link a Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -31,7 +37,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <script scr=""></script>
+    
 </head>
 
 <body>
@@ -62,11 +68,15 @@
                 </ul>
             </div>
         </div>
+</body>
+</html>
+
 
 
     </header>
+    <p id="valorDolar"></p>
 
-    <!-- Begin page content -->
+<!-- Begin page content -->
     <main role="main" class="container container_bajopantalla">
 
         <article>
@@ -179,7 +189,6 @@
                     </div>
                 </div>
             </div>
-
 
 
             <div class="row" style="margin-top: 25px;">
